<resources>
    <string name="app_name">CultuPaz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Muro</string>
    <string name="title_notifications">Eventos</string>
    <string name="title_new">Sing in</string>
    <string name="empezar_btn">EMPEZAR</string>
    <string name="bienvenido_name">Bienvenido</string>
    <string name="txt_terminos_condiciones_name">Te damos una grata bienvenida a Cultupaz interactua en nuestra interfaz movil, para saber mas de nosotros.</string>
    <string name="txt_terminos_condiciones_2_name">Antes de continuar acepta nuestros terminos y condiciones para que puedas acceder a nuestra plataforma.</string>
    <string name="acepta_terminos">Aceptar</string>
    <string name="no_acepta_terminos">Cancelar</string>


    <!--  Blogs-->
    <string name="tittle">Fomentando cultura y paz </string>
    <string name="descripcion">La cultura de paz inicia con el reconocimiento de los derechos de las y los demás a una vida digna, lo cual se logra mediante el diálogo y la posibilidad de resolver los conflictos de manera positiva, creando las condiciones que lleven a la paz integral</string>
    <string name="cultura">Cultura de paz</string>
    <string name="descultura">Garantiza que los conflictos que surgen de las relaciones humanas se resuelven de forma no violenta</string>
    <string name="derechosl">LGBTIQ+</string>
    <string name="derechosldescripcion">Igualdad de derechos para las personas LGBTIQ+</string>
    <string name="derechosmujeres">Derechos a las mujeres</string>
    <string name="derechosninos">Equidad de género </string>
    <string name="equidadgenerodescripcion"> Brinda a las mujeres y a los hombres las mismas oportunidades, condiciones, y formas de trato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blog">Blog</string>


    <string name="app_nam">Dropdown</string>
    <string name="select">Select Item</string>

    <!-- lgtbiq INFORMACION-->
    <string name="titulo">LGTBIQ+ Terminología de la diversidad</string>
    <string name="titulo1">A propósito del esquema del post de mi blog
        Roles de género – Diversidad sexual, y gracias a algunas dudas
        que hemos aclarado y otras que aún tenemos al respecto,
        he decidido recopilar en éste nuevo post la terminología de las
        siglas LGBTIQ+ además del resto de las que aparecen en el esquema
        y alguna más con sus correspondientes definiciones, para así
        compartir con vosotres algunos de los temas que inspiran mis
        últimos dibujos, con los que grito por laigualdad de
        género, en una rebelión contra los roles que
        el heterocispatriarcado impone. LGTBIQ+  son las siglas que designan
        colectivamente lésbico, gay, bisexual,trans, intersexual,
        queer, incluyendo a través del + cualquier otra identidad
        que se quede en el medio de todas ellas o en ninguna parte.</string>



    /links blogs informacion/
    <string name="hiperlink1"><a href="https://www.corteidh.or.cr/tablas/r24906.pdf">El amor en tiempos de cólera: Derechos LGBT en COLOMBIA</a></string>

    <string name="hiperlink2"><a href="https://colombiaartesanal.com.co/rutas/cauca/">El amor en tiempos de cólera: Derechos LGBT en COLOMBIA</a></string>


    <string name="pregunta">¿Cuáles son los principios de la cultura de la paz?</string>
    <string name="masinfomasinfo">Para mas información</string>
    <string name="culturadescrip">Estos tres principios están interrelacionados y se refuerzan mutuamente: Consentimiento de las partes. Imparcialidad. No uso de la fuerza, excepto en legítima defensa y en defensa del mandato:</string>

    <!--  links  blogs-->


    <!-- link for home text view-->
    <string name="hyperlink"><a href="https://www.mincultura.gov.co/prensa/noticias/Paginas/Colombia-camina-hacia-la-paz,-a-través-de-la-cultura.aspx">Ministerio de cultura</a></string>
    <!-- link for practice textview-->
    <string name="hyperlink2"><a href="https://practice.geeksforgeeks.org/">practice.geeksforgeeks.org</a></string>


    <!-- href tag is used to add link-->
    <!-- link for home text view-->

    <!-- link for practice textview-->
    <string name="link3"><a href="https://practice.geeksforgeeks.org/">practice.geeksforgeeks.org</a></string>


    <!-- String Spinner-->

    <string-array name="documento_array">
        <item>Cédula</item>
        <item>Tarjeta Identidad</item>
    </string-array>


    <string-array name="genero_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>otro</item>
    </string-array>


    <!-- INFORMACION EN IMAGENES -->
    <string name="influye">las artesanías promueven la paz y la cultura al fomentar la comprensión entre diferentes culturas, preservar tradiciones y transmitir mensajes de armonía. Su belleza y significado generan respeto mutuo y contribuyen a un ambiente pacífico..</string>
    <string name="botella">Botella de vidrio</string>
    <string name="cueros">Bolso en cuero color miel</string>
    <string name="mochilaf">Mochila en fique</string>
    <string name="titulo3">Mochila familiar</string>
    <string name="titulo4">Bolso wayuu </string>
    <string name="titulo5">Collares mostacilla</string>
    <string name="titulo6">Mostacilla Manilla</string>
    <string name="titulo7">Olla Frijolera Barro </string>
    <string name="titulo8">Cazuela de barro negro </string>
    <string name="titulo9">Aretes en crochet</string>
    <string name="titulo10">sombrero Nasa</string>
    <string name="titulo11">Cuchara de madera</string>


    <!--  Nosotros-->
    <string name="nosotros">   Incentivamos mediante el aplicativo web diferentes alternativas de paz,creando módulos de cultura, juegos y actividades didácticas que tiene como objetivo unir a las personas y a su ves fomentar un ambiente de paz.</string>

    <string name="vision"> Fomentar la cultura de la paz dentro de los ambientes del
    SENA si quieres hablar con nosotros ubicanos en CTPI, por
    lo tanto para elegir, construir e integrar a nuestra vida
    aquellos valores, conocimientos y formas de ser que nos
    ayudan a entender actitudes, comportamientos y estilos de
    vida propicios de las personas con dichas dificultades.</string>

    <string name="mision">Atender con eficacia, responsabilidad y sentido
    humanitario los problemas psicológicos que se presentan en
    las diferentes áreas del bienestar y desarrollo social en
    las que el comportamiento del individuo reviste esencial
    importancia para la vida en sociedad, tanto en los ámbitos
    local y regional como en el nacional.</string>

    <!-- INFORMACION EN MENU -->

    <string name="comunicacion">Transmitimos un mensaje no solo a través de lo qué decimos, sino de cómo lo decimos, ya sea de forma verbal o escrita.</string>
    <string name="Creatividad">Sin duda alguna la creatividad es una singularidad que caracteriza a los seres humanos. Gracias al milagro cognitivo estamos ilimitadamente dotados de esta particularidad del pensamiento.</string>
    <string name="Identidad">La identidad o el self es, entonces, el  resultado del encuentro de estos dos aspectos: nuestras motivaciones más íntimas y más creativas, con las normas que nos han enseñado nuestros mayores.</string>

    <!-- INFORMACION DE LA WEB -->
    <string name="Bienvenido">Bienvenido a la previzualizacion de nuestro sitio web, en el se aplicaran diversos modulos en los cuales el usuario podra interactuar de forma fluida y asi conocer mas sobre cultura y paz en direntes aspectos.</string>
    <string name="Comunidad">La comunidad es clave para construir la paz. Esto implica justicia, igualdad, respeto mutuo y colaboración. Para lograrlo es importante promover el diálogo, la inclusión y abordar las causas de los conflictos Además, la comunidad puede respaldar la reconciliación, el respeto a los derechos humano y participar en la resolución pacífica de disputas Todos los miembros de la comunidad tienen la responsabilidad de contribuir un entorno pacífico y armonioso. </string>
    <string name="sitioweb">Nuestro sitio web contara con un inicio de sesion en 2 tipos de usuario, tanto como aprendiz que tendra la posibilidad de jugar compartir pensamientos, mostrar tus propias artesanias y lo mas importante solicitar un evento y como gestor crear un evento para todos los aprendices y realizar charlas.</string>
    <string name="creacion">Para crear este sitio web se utilizaron las siguientes tecnologias: Visual Studio Code,javascript,Nodejs, React, MySql, Xampp, figma,Trello  Android Studio entre otros.</string>
    <string name="libertad">La libre expresión, la igualdad de género y los derechos humanos son pilares esenciales para construir una sociedad justa y libre. Estos valores promueven la diversidad de opiniones, la equidad entre hombres y mujeres, y el respeto y protección de los derechos inherentes a todas las personas. Defendámoslos en nuestro muro y trabajemos juntos por un mundo más inclusivo y humano.</string>

    <string name="juegos">En este módulo encontrarás dos juegos para disfrutar: el primero trata sobre tus conocimientos acerca de la paz; el segundo es un juego de encontrar parejas. ¡Diviértete mientras participas y disfrutas de estos entretenidos desafíos!</string>

    <!-- Expresarte -->
    <string name="Expresarte">La libertad de expresión fomenta el intercambio de ideas para la paz y el desarrollo cultural. Ejercerla de manera responsable promueve un ambiente respetuoso y enriquecedor que valora la diversidad y el diálogo constructivo.</string>

</resources>