<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/culturaProbando"
    tools:context=".ui.Cultura"
    android:layout_width="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/regresoin"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/regreso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="359dp"
            android:layout_height="171dp"
            android:text="@string/culturadescrip"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.211" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="383dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:text="@string/pregunta"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:text="@string/cultura"
            android:textColor="@color/btncolor"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="391dp"
            android:layout_height="234dp"
            android:layout_gravity="center"
            android:src="@drawable/cultupaz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="376dp"
            android:layout_height="169dp"
            android:text="@string/descripcion"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
<<<<<<< HEAD
            app:layout_constraintVertical_bias="0.741" />
=======
            app:layout_constraintVertical_bias="0.853" />
>>>>>>> 36d9a2e497f6aa8cb208c8d80320652ed1bc5b2b

        <TextView
            android:id="@+id/textView8"
            android:layout_width="337dp"
            android:layout_height="37dp"
            android:layout_marginTop="716dp"
            android:text="@string/hyperlink"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
<<<<<<< HEAD
            app:layout_constraintHorizontal_bias="0.337"
=======
            app:layout_constraintHorizontal_bias="0.067"
>>>>>>> 36d9a2e497f6aa8cb208c8d80320652ed1bc5b2b
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
