<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lgtbiprobando"
    tools:context=".ui.lgtbi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/regresoinf2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/regreso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.038"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/btncolor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="324dp"
                android:layout_height="161dp"
                android:layout_gravity="center"
                android:src="@drawable/ilustracion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="323dp"
                android:layout_height="614dp"
                android:layout_marginLeft="5pt"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="5dp"
                android:text="@string/titulo1"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.754" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="320dp"
                android:layout_height="92dp"
                android:layout_marginLeft="5pt"
                android:layout_marginTop="956dp"
                android:layout_marginRight="5pt"
                android:layout_marginBottom="1dp"
                android:text="@string/hiperlink1"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.406"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>
