<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_web"
    tools:context=".ui.info_web">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="185dp"
                android:background="@drawable/somos"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="53dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="40dp"
                    android:text="Quiénes somos"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/descriptionn"
                android:layout_width="342dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:text="@string/nosotros"
                android:textColor="@color/purpledark"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="172dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_margin="16dp"
                    android:padding="90dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/paz" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Visión"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="292dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:text="@string/vision"
                android:textColor="@color/black"
                tools:layout_editor_absoluteY="136dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Misión"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="292dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:text="@string/mision"
                android:textColor="@color/black"
                tools:layout_editor_absoluteY="136dp" />





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/footer_web" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>